--- a/package.json
+++ b/package.json
@@ -2,19 +2,41 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/MuhammadLateef/Material_UI_Project.git",
   "dependencies": {
+    "@date-io/date-fns": "1.x",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/pickers": "^3.3.10",
+    "@mui/icons-material": "^5.6.1",
+    "@mui/lab": "^5.0.0-alpha.77",
+    "@mui/material": "^5.6.1",
+    "@mui/x-date-pickers": "^5.0.0-alpha.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.1",
+    "date-fns": "^2.28.0",
+    "gh-pages": "^3.2.3",
     "react": "^18.0.0",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^18.0.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
+    "react-scroll": "^1.8.7",
+    "react-table": "^7.7.0",
+    "react-transition-group": "^4.4.2",
+    "react-typed": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy":"yarn run build",
+    "deploy":"gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
